@@ -174,4 +174,9 @@ int gretl_is_identity_matrix (const gretl_matrix *m);
 
 int gretl_is_zero_vector (const gretl_vector *v);
 
+gretl_matrix *
+gretl_covariance_matrix_from_varlist (const int *list, const double **Z, 
+				      const DATAINFO *pdinfo, 
+				      gretl_matrix **means, int *err);
+
 #endif /* GRETL_MATRIX_H */
