@@ -229,6 +229,8 @@ void free_confint (CONFINT *cf);
 
 int ls_aic_bic (MODEL *pmod);
 
+double gretl_mean (int t1, int t2, const double *x);
+
 double gretl_stddev (int t1, int t2, const double *x);
 
 double gretl_variance (int t1, int t2, const double *x);
