@@ -24,6 +24,8 @@ version 1.3.3
 - add "quiet" option for the commands adf, kpss and wls
 - add "simple-print" option for ols command (just print the
   coefficient table, with no auxiliary statistics)
+- add "mahal" command: calculate Mahalanobis distances given
+  a set of variables
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
